--- a/open-toolchain-extender/cd-pipeline.yaml
+++ b/open-toolchain-extender/cd-pipeline.yaml
@@ -209,7 +209,7 @@ spec:
         - name: pipeline-debug
           value: $(params.pipeline-debug)
       workspaces:
-        - name: artifacts
+        - name: artifacts1
           workspace: pipeline-ws
     
     - name: containerize-user-service
@@ -342,7 +342,7 @@ spec:
         - name: pipeline-debug
           value: $(params.pipeline-debug)
       workspaces:
-        - name: artifacts
+        - name: artifacts2
           workspace: pipeline-ws
 
     - name: containerize-simulator-service
@@ -411,7 +411,8 @@ spec:
           workspace: pipeline-ws
     
     - name: vulnerability-advisor-simulator-service
-      runAfter: containerize-simulator-service
+      runAfter: 
+        - containerize-simulator-service
       taskRef:
         name: icr-check-va-scan
       params:
@@ -473,5 +474,5 @@ spec:
         - name: pipeline-debug
           value: $(params.pipeline-debug)
       workspaces:
-        - name: artifacts
+        - name: artifacts3
           workspace: pipeline-ws
