--- a/open-toolchain-extender/cd-pipeline.yaml
+++ b/open-toolchain-extender/cd-pipeline.yaml
@@ -209,7 +209,7 @@ spec:
         - name: pipeline-debug
           value: $(params.pipeline-debug)
       workspaces:
-        - name: artifacts1
+        - name: artifacts
           workspace: pipeline-ws
     
     - name: containerize-user-service
@@ -342,7 +342,7 @@ spec:
         - name: pipeline-debug
           value: $(params.pipeline-debug)
       workspaces:
-        - name: artifacts2
+        - name: artifacts
           workspace: pipeline-ws
 
     - name: containerize-simulator-service
@@ -474,5 +474,5 @@ spec:
         - name: pipeline-debug
           value: $(params.pipeline-debug)
       workspaces:
-        - name: artifacts3
+        - name: artifacts
           workspace: pipeline-ws
